# UnifiedLAB

./: .gitignore  Cargo.toml  Justfile  README.md  TODO.md  compressed.drawio  experiment.drawio  main.py  mock_gulp  mock_vasp  pyproject.toml
docs/: README.md  book.toml
docs/src/: SUMMARY.md  architecture.md  checkpoint-store.md  cli.md  concepts.md  concepts.md#coordinator-vs-workers  concepts.md#events-vs-checkpoints  concepts.md#jobs-nodes-and-flows  development.md  eventlog-transport.md  getting-started.md  getting-started.md#quickstart-cluster-mode  getting-started.md#quickstart-laptop-mode  glossary.md  how-to-use.md  index.md  installation.md  marketplace.md  python-shim.md  resources-topology.md  roadmap.md  troubleshooting.md  tui.md  workflow-dsl.md
scripts/: active_learning_shim.py
src/: checkpoint.rs  core.rs  drivers.rs  eventlog.rs  guardian.rs  lib.rs  logs.rs  main.rs  marketplace.rs  physics.rs  provenance.rs  resources.rs  transport.rs  tui.rs  workflow.rs
src/drivers/: external.rs  janus.rs
src/dsl/: mod.rs
src/workflow/: experiment.drawio  importer.rs
tests/: drawio_parsing.rs
unifiedlab_drivers/: agent_shim.py  cli.py  janus_daemon.py
